# solder_paste_workspace

./: .gitignore  InstallOpenCV.bash  README.md
misc_files/CAD models/: camera mount.SLDPRT  circi.SLDPRT  ciruit.STL  shelf.SLDPRT  table.SLDPRT  table.STL  tip.SLDPRT  vaccuum tip.SLDPRT
misc_files/CAD models/CAD models/: accessory 2.SLDPRT  ciruit.SLDPRT  shelf.STL
misc_files/CAD models/StationBackups/: Solution4_1_20180324-175236.rsstn
src/abb_control/: CMakeLists.txt  package.xml
src/abb_control/scripts/: hand_eye_calibration_motion.py  modern_robotics.py  solder_paste.py  trajectory_generator.py
src/abb_control/src/: abb_control_node.cpp
src/abb_control/srv/: MoveToJointAngle.srv
src/abb_experimental/irb120_control/: CMakeLists.txt
src/abb_experimental/irb120_description/: CMakeLists.txt
src/computer_vision/: CMakeLists.txt  package.xml
src/computer_vision/scripts/: computer_vision.py
src/gerber_import/: CMakeLists.txt  package.xml
src/gerber_import/msg/: pad.msg  solder_mask.msg
src/gerber_import/src/: gerber_import_client.cpp  gerber_import_moveit_node.cpp  gerber_import_node.cpp  read_gerber_solder_paste.c
src/gerber_import/srv/: read_solder_mask.srv
src/irb120_perception/: CMakeLists.txt
src/irb120_perception/src/: irb120_perception_node.cpp
src/moveit_interface/: CMakeLists.txt  package.xml
src/moveit_interface/planning/: CMakeLists.txt
src/moveit_interface/planning/src/: move_group_interface.cpp
src/paste_arduino/: CMakeLists.txt  package.xml
src/paste_arduino/script/: DepositPaste.py  (+1 more)
src/pcb_offsets/: CMakeLists.txt
(+26 files in other folders)
